Fix CBUINavigationView z-index

--- a/classes/CBUINavigationView/CBUINavigationView.css
+++ b/classes/CBUINavigationView/CBUINavigationView.css
@@ -4,5 +4,5 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
-    z-index: 1000;
+    z-index: 500;
 }
